@startuml Services and Repositories

' Styling
skinparam classAttributeIconSize 0
skinparam style strictuml
skinparam componentStyle uml2

' Repositories
interface VehicleRepository {
    +findByPlate(plate: String): Optional<Vehicle>
    +findByNameContainingIgnoreCase(name: String): List<Vehicle>
    +existsByPlate(plate: String): boolean
}

interface CustomerRepository {
    +findByDocument(document: String): Optional<Customer>
    +findByNameContainingIgnoreCase(name: String): List<Customer>
    +existsByDocument(document: String): boolean
}

interface AgencyRepository {
    +findByDocument(document: String): Optional<Agency>
    +findByNameContainingIgnoreCase(name: String): List<Agency>
    +existsByDocument(document: String): boolean
}

interface RentalRepository {
    +findByVehicle(vehicle: Vehicle): List<Rental>
    +findByCustomer(customer: Customer): List<Rental>
    +findActiveRentalByVehicle(vehicle: Vehicle): Optional<Rental>
}

' Services
class VehicleService {
    -VehicleRepository vehicleRepository
    --
    +createVehicle(command: CreateVehicleCommand): Vehicle
    +findByPlate(plate: String): Vehicle
    +findByName(name: String): List<Vehicle>
    +updateVehicle(id: UUID, command: UpdateVehicleCommand): Vehicle
}

class CustomerService {
    -CustomerRepository customerRepository
    --
    +create(command: CreateCustomerCommand): Customer
    +findByDocument(document: String): Customer
    +findByName(name: String): List<Customer>
    +updateCustomer(id: UUID, command: UpdateCustomerCommand): Customer
}

class AgencyService {
    -AgencyRepository agencyRepository
    --
    +create(command: CreateAgencyCommand): Agency
    +findByDocument(document: String): Agency
    +findByName(name: String): List<Agency>
    +updateAgency(id: UUID, command: UpdateAgencyCommand): Agency
}

class RentalService {
    -RentalRepository rentalRepository
    -VehicleService vehicleService
    -CustomerService customerService
    -AgencyService agencyService
    --
    +createRental(command: CreateRentalCommand): Rental
    +completeRental(id: UUID): Rental
    +cancelRental(id: UUID): Rental
}

' Service Dependencies
VehicleService --> VehicleRepository
CustomerService --> CustomerRepository
AgencyService --> AgencyRepository
RentalService --> RentalRepository
RentalService --> VehicleService
RentalService --> CustomerService
RentalService --> AgencyService

@enduml